[package]
name = "mock-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
serde = { version = "1.0.148", features = ["derive"] }
actix-files = "0.6"
env_logger = "0.9.0"
log = "0.4"