[package]
name = "mock-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.aarch64-apple-darwin]
rustflags = '-L /opt/homebrew/opt/libpq/lib -L /opt/homebrew/lib'

[dependencies]
actix-web = "4.3.0"
chrono = "0.4.23"
diesel = { version = "2.0.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.10"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
